Updated content on "lambda functions" and some refactorings.